# knr2

./: CMakeLists.txt
libknr2/: knr2_string.c  knr2_string.h
src/: chapter_one.c  main.c
